objects/LBI__ScoringField__c.object
<CustomObject>
    <description>Object to store a list of fields important for scoring</description>
    <fields>
        <fullName>LBI__ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LBI__FieldName__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ObjectName__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ScoringRules__c</fullName>
        <description>List of scoring rules relying on this field</description>
        <label>Associated Scoring Rules</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Lattice Scoring Field</label>
    <nameField>
        <displayFormat>SF-{0000000}</displayFormat>
        <label>Lattice Scoring Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Scoring Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>